--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,47 +4,32 @@
     animation: scaleAnimation 1.5s ease-in-out infinite alternate;
 }
 
-@keyframes scaleAnimation {
-    0% {
-        transform: scale(0.5);
-        filter:brightness(80%);
-        filter: brightness(100%);
-        filter:contrast(-50%);
-        filter:grayscale(100%);
-    }
-    100% {
-        transform: scale(1);
-        filter:  blur(0px);   
-    }
-}
-
 #moon{
     margin-top: 15px;
     color: var(--text-color);
     font-size: 3rem;
     width: 50px;
-  
     float:left;
     text-align: left;
     flex: 1;
 }
 
 #sun{
-    color: #e3f3eb;
+    color: #f5f5f5;
 }
 
 :root{
-    --bg-color: #3d4441;
-    --second-bg-color: #0c1c17;
-    --text-color: #e3f3eb;
-    --main-color: #2ede78;
+    --bg-color: #708090;
+    --second-bg-color: #1a1a5e;
+    --text-color: #f5f5f5;
+    --main-color: #008080;
 }
 
 .dark-theme{
-    /* --bg-color:  #3d4441; */
-    --second-bg-color: #e3f3eb;
+    /* --bg-color:  #708090; */
+    --second-bg-color: #f5f5f5;
     --text-color:  #0c1c17;
-    /* --main-color: #2ede78;   */
+    /* --main-color: #008080;   */
 }
 
 #moon:hover{
@@ -79,14 +64,12 @@
     cursor: pointer;
     color: var(--main-color);
 }
-  
 .nbar a {
     float: left;
     font-size: 2rem;
     color: #e3f3eb;
     text-align: center;
     padding: 14px 16px;
- 
     text-decoration: none;
     transition: .3s;
   }
@@ -95,7 +78,6 @@
     color: var(--main-color);
     font-weight: bold;
     transform: scale(1.3);
-    text-transform: lowercase;
 }
 
 .nbar a:hover, .subnav:hover .subnavbtn {
@@ -113,7 +95,7 @@ button.subnavbtn{
 }
 
 .subnav .subnavbtn {
-    font-size: 2rem;  
+    font-size: 2rem;
     border: none;
     outline: none;
     color:white;
@@ -124,8 +106,8 @@ button.subnavbtn{
   }
   .subnav .subnavbtn:hover{
     font-weight: bold;
-    transform: scale(1.2);
-    text-transform: lowercase;
+    transform: scale(1.3);
+    transition: .3s;
   }
 
   .subnav-content {
@@ -159,17 +141,6 @@ button.subnavbtn{
 
 .head .sticky{
     border-bottom: 1rem solid rgba(0 0 0 .2);
-}
-
-.name{
-    cursor:default;
-    font-weight: 600;
-    color: var(--main-color);
-    font-size: 4.5rem;
-}
-
-.name:hover{
-    text-transform: lowercase;
 }
 
 .home{
@@ -346,7 +317,6 @@ button.subnavbtn{
     width:100%;
     height: 100%;
     border-radius:3rem ;
-    
 }
 
 .galbox:hover img{
@@ -788,6 +758,7 @@ span{
         width: 90vw;
         margin-top: -200px;
         margin-bottom: -150px;
+
     }
 }
 
